Update 'znmllodv4-python' component image to: quay.io/rhtap_qe/rhtap-qe:205b66f0c4e67e9057c70ae6ff3028f3ab5c3773@sha256:3467edcd865fb7188e1456d039498c3eae9b209e4f8bb3c7fcb3888826dd1f3a

--- a/components/znmllodv4-python/overlays/development/deployment-patch.yaml
+++ b/components/znmllodv4-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: znmllodv4-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:205b66f0c4e67e9057c70ae6ff3028f3ab5c3773@sha256:3467edcd865fb7188e1456d039498c3eae9b209e4f8bb3c7fcb3888826dd1f3a
+          name: container-image
